2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * data/seahorse.schemas.in:
    * plugins/applet/GNOME_SeahorseApplet.xml:
    * plugins/applet/Makefile.am:
    * plugins/applet/seahorse-applet-preferences.glade:
    * plugins/applet/seahorse-applet.c: Add option to disable clipboard 
    contents detection and updating of the panel icon.
    
2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-check-button-control.c:
    * libseahorse/seahorse-check-button-control.h: Build a simpler API 
    for attaching check buttons to gconf keys.
    
2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>
    
    * plugins/applet/seahorse-applet.c: Don't crash when no text on clipboard
    and encrypt or sign.
    
2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/applet/seahorse-applet.c: Only free our own SeahorseContext
    in applet.
    
2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * pixmaps/Makefile.am:
    * pixmaps/seahorse-applet-encrypted.png:
    * pixmaps/seahorse-applet-key.png:
    * pixmaps/seahorse-applet-signed.png:
    * pixmaps/seahorse-applet-text.png:
    * pixmaps/seahorse-applet-unknown.png:
    * pixmaps/seahorse-applet.xcf:
    * plugins/applet/seahorse-applet.c: Show state of clipboard contents in 
    the applet icon. Only display relevant menu items. 
    
2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * libseahorse/seahorse-notification.c: Update libnotify support to 0.3
    
2006-02-24  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-daemon.c:
    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h:
    * plugins/applet/seahorse-applet.c:
    * plugins/nautilus/seahorse-pgp-preferences.c:
    * src/main.c: Some small changes to our stock icon helper functions to
    allow multiple icon tables to be loaded. 
    
2006-02-22  Adam Schreiber  <sadam@clemson.edu>

    * plugins/gedit/seahorse-gedit-bonobo.c: include 