@@ -23,7 +23,7 @@
     
         <oaf_attribute name="name" type="string" _value="Clipboard Encryption Operations"/>
         <oaf_attribute name="description" type="string" _value="Encrypt, decrypt or sign the clipboard (uses PGP type encryption)."/>
-        <oaf_attribute name="panel:icon" type="string" value="seahorse.png"/>
+        <oaf_attribute name="panel:icon" type="string" value="seahorse-applet.png"/>
         <oaf_attribute name="bugzilla:bugzilla" type="string" value="GNOME"/>
         <oaf_attribute name="bugzilla:product" type="string" value="seahorse"/>
         <oaf_attribute name="bugzilla:component" type="string" value="Applet"/>
