@@ -1,5 +1,11 @@
 2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * pixmaps/Makefile.am:
+    * pixmaps/seahorse-applet.png:
+    * plugins/applet/GNOME_SeahorseApplet.server.in.in: Use descriptive icon
+    
+2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>
+
     * data/seahorse.schemas.in:
     * plugins/applet/GNOME_SeahorseApplet.xml:
     * plugins/applet/Makefile.am:
